--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,9 @@
 \usepackage{subcaption}
 \usepackage{float}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage[normalem]{ulem}
+\usepackage{enumerate}
 
 \usepackage{geometry}
 \geometry{
