--- a/3.tex
+++ b/3.tex
@@ -509,14 +509,10 @@
             I_6 = & GO(I_4, a) = \{A \to bBa \cdot \} \\
             \hline
             I_7 = & GO(I_5, A) = \{B \to aA \cdot c, B \to aA \cdot b, A \to A \cdot b \} \\
-            I_8 = & GO(I_5, b) = \{A \to b \cdot Ba, B \to \cdot aAc, B \to \cdot a, B \to \cdot aAb \} \\
+                  & GO(I_5, b) = \{A \to b \cdot Ba, B \to \cdot aAc, B \to \cdot a, B \to \cdot aAb \} = I_2 \\
             \hline
-            I_9 = & GO(I_7, c) = \{B \to aAc \cdot\} \\
-            I_{10} = & GO(I_7, b) = \{B \to aAb \cdot, A \to Ab \cdot\} \\
-            \hline
-                  & GO(I_8, B) = \{A \to bB \cdot a\} = I_4 \\
-                  & GO(I_8, a) = \{B \to a \cdot Ac, B \to a \cdot, B \to a \cdot Ab, A \to \cdot Ab, A \to \cdot bBa\} = I_5 \\
-            \hline
+            I_8 = & GO(I_7, c) = \{B \to aAc \cdot\} \\
+            I_9 = & GO(I_7, b) = \{B \to aAb \cdot, A \to Ab \cdot\}
         \end{array}
     \end{equation*}
     
@@ -536,9 +532,8 @@
                 5 & r_5 & r_5, s_8 & r_5 & r_5 & & 7 & \\
                 6 & r_3 & r_3 & r_3 & r_3 & & & \\
                 7 & & s_{10} & s_9 & & & & \\
-                8 & s_5 & & & & & & 4 \\
-                9 & r_4 & r_4 & r_4 & r_4 & & & \\
-                10 & r_6, r_2 & r_6, r_2 & r_6, r_2 & r_6, r_2 & & & \\
+                8 & r_4 & r_4 & r_4 & r_4 & & & \\
+                9 & r_6, r_2 & r_6, r_2 & r_6, r_2 & r_6, r_2 & & & \\
             \end{array}
         \end{equation*}
         \caption{具有冲突的分析表}
@@ -576,9 +571,8 @@
             5 & r_5 & s_8 & r_5 & r_5 & & 7 & \\
             6 & r_3 & r_3 & r_3 & r_3 & & & \\
             7 & & s_{10} & s_9 & & & & \\
-            8 & s_5 & & & & & & 4 \\
-            9 & r_4 & r_4 & r_4 & r_4 & & & \\
-            10 & r_6 & r_2 & r_2 & r_2 & & & \\
+            8 & r_4 & r_4 & r_4 & r_4 & & & \\
+            9 & r_6 & r_2 & r_2 & r_2 & & & \\
         \end{array}
     \end{equation*}
     
