--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \usepackage[normalem]{ulem}
 \usepackage{enumerate}
 \usepackage{listings}
+\usepackage{underscore}
 
 \usepackage{geometry}
 \geometry{
