--- a/4.tex
+++ b/4.tex
@@ -43,7 +43,9 @@
         (7) & - & (4) & (6)
     \end{tabular}
     
-    观察到上表中 (1) 与 (5) 是重复的，可以使用\textbf{间接三元式}来消除冗余三元式：
+    \textbf{间接三元式}：
+    
+    观察到上表中 (1) 与 (5) 是重复的，可以使用间接三元式来消除冗余三元式：
     
     间接码表（横排）：(1) (2) (3) (4) (1) (5) (6)
     
@@ -58,15 +60,16 @@
         (6) & - & (4) & (5)
     \end{tabular}
     
-    再改写成\textbf{四元式}：
+    \textbf{四元式}：
     
     \begin{tabular}{ccccc}
         (1) & + & a & b & T1 \\
         (2) & neg & T1 & _ & T2 \\
         (3) & + & c & d & T3 \\
         (4) & * & T2 & T3 & T4 \\
-        (5) & + & T1 & c & T5 \\
-        (6) & - & T4 & T5 & T6 \\
+        (5) & + & a & b & T5 \\
+        (6) & + & T5 & c & T6 \\
+        (7) & - & T4 & T6 & T7 \\
     \end{tabular}
     
     \item[5.] 按上课所讲方式写出四元式序列：
